--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,10 +1,10 @@
 name: Sync Upstream and Modify File
 
 on:
+  workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'  # 每天 0 点触发
-  workflow_dispatch:  # 手动触发
-
+  
 jobs:
   sync_and_modify:
     runs-on: ubuntu-latest
@@ -22,13 +22,8 @@ jobs:
           git remote add upstream https://github.com/unifreq/openwrt_packit.git
           git fetch upstream
 
-      - name: Fetch Upstream Changes
-        run: git pull upstream master
-
       - name: Merge Upstream Changes
-        run: |
-          git checkout master
-          git merge --allow-unrelated-histories -s ours upstream/master
+        run: git merge --allow-unrelated-histories upstream/master
         
       - name: Modify File
         run: |
@@ -37,22 +32,23 @@ jobs:
           
           # 检查文件中是否已存在要插入的内容
           if ! grep -q "rm -f /etc/config/wireles" "$target_file"; then
-            # 如果存在，删除它
-            sed -i '/rm -f \/etc\/config\/wireles/d' "$target_file"
-          fi
-          
-          # 新增的行内容
-          new_line="rm -f /etc/config/wireles"
+            # 新增的行内容
+            new_line="rm -f /etc/config/wireles"
             
-          # 使用 awk 来在指定行之下插入新行并对齐
-          awk -v new_line="$new_line" '/mv -f .\/etc\/modules.d\/brcm\*  .\/etc\/modules.d.remove\/ 2>\/dev\/null/ {print $0 RS new_line; next} 1' "$target_file" > temp && mv temp "$target_file"
-                
-          # 提交修改
-          git commit -am "Add rm command to $target_file"
-          git push origin master
+            # 复制一行'mv -f ./etc/modules.d/brcm*  ./etc/modules.d.remove/ 2>/dev/null'并将其中的一行替换为新行
+            awk '/mv -f .\/etc\/modules.d\/brcm\*  .\/etc\/modules.d.remove\/ 2>\/dev\/null/ {
+              print
+              print "'"$new_line"'"
+              next
+            }1' "$target_file" > temp && mv temp "$target_file"
+            
+            # 提交修改
+            git commit -am "Add rm command to $target_file"
+            git push origin master
+          fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
+
   cleaning:
     if: ${{ always() }}
     needs: [sync_and_modify]
