--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,4 +1,4 @@
-name: Sync Upstream and Modify File
+name: Sync Upstream and Overwrite File
 
 on:
   workflow_dispatch:
@@ -6,7 +6,7 @@ on:
     - cron: '0 0 * * *'  # 每天 0 点触发
   
 jobs:
-  sync_and_modify:
+  sync_and_overwrite:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
@@ -22,36 +22,19 @@ jobs:
           git remote add upstream https://github.com/unifreq/openwrt_packit.git
           git fetch upstream
 
-      - name: Merge Upstream Changes
-        run: git merge --allow-unrelated-histories upstream/master
-        
-      - name: Modify File
+      - name: Overwrite File
         run: |
-          # 找到需要修改的文件 public_funcs，路径是 /public_funcs
-          target_file="public_funcs"
+          # 从上游拉取最新的代码
+          git fetch upstream
+          git checkout master
+          git reset --hard upstream/master
           
-          # 检查文件中是否已存在要插入的内容
-          if ! grep -q "rm -f /etc/config/wireles" "$target_file"; then
-            # 新增的行内容
-            new_line="rm -f /etc/config/wireles"
-            
-            # 复制一行'mv -f ./etc/modules.d/brcm*  ./etc/modules.d.remove/ 2>/dev/null'并将其中的一行替换为新行
-            awk '/mv -f .\/etc\/modules.d\/brcm\*  .\/etc\/modules.d.remove\/ 2>\/dev\/null/ {
-              print
-              print "'"$new_line"'"
-              next
-            }1' "$target_file" > temp && mv temp "$target_file"
-            
-            # 提交修改
-            git commit -am "Add rm command to $target_file"
-            git push origin master
-          fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   cleaning:
     if: ${{ always() }}
-    needs: [sync_and_modify]
+    needs: [sync_and_overwrite]
     runs-on: ubuntu-latest
     steps:
     - name: Delete workflow runs
