--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,4 +1,4 @@
-name: Sync Upstream and Overwrite File
+name: Sync Upstream and Modify File
 
 on:
   workflow_dispatch:
@@ -6,7 +6,7 @@ on:
     - cron: '0 0 * * *'  # 每天 0 点触发
   
 jobs:
-  sync_and_overwrite:
+  sync_and_modify:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
@@ -22,14 +22,9 @@ jobs:
           git remote add upstream https://github.com/unifreq/openwrt_packit.git
           git fetch upstream
 
-      - name: Overwrite File
-        run: |
-          # 从上游拉取最新的代码
-          git fetch upstream
-          git checkout master
-          git reset --hard upstream/master
-          git merge --allow-unrelated-histories upstream/master
-          
+      - name: Merge Upstream Changes
+        run: git merge --allow-unrelated-histories upstream/master
+        
       - name: Modify File
         run: |
           # 找到需要修改的文件 public_funcs，路径是 /public_funcs
@@ -56,7 +51,7 @@ jobs:
 
   cleaning:
     if: ${{ always() }}
-    needs: [sync_and_overwrite]
+    needs: [sync_and_modify]
     runs-on: ubuntu-latest
     steps:
     - name: Delete workflow runs
