--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -3,7 +3,7 @@ name: Sync Upstream and Modify File
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * *'  # 每天 0 点触发
+    - cron: '0 21 * * 5'
   
 jobs:
   sync_and_modify:
